--- a/index.css
+++ b/index.css
@@ -215,6 +215,134 @@
     margin-left: 0 !important;
   }
 }
+.services__title {
+  height: 200px;
+  position: relative;
+}
+.services__title-text {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  text-transform: uppercase;
+  margin-left: 50px;
+  padding-top: 130px;
+}
+.services__title-img-poly {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+.services__title-img-arrow {
+  position: absolute;
+  top: 0;
+  left: 90px;
+  z-index: -1;
+  width: 63%;
+  height: 85%;
+}
+.services__items {
+  margin-top: 36px;
+  justify-content: center;
+  margin-left: -7.5px;
+  margin-right: -7.5px;
+  padding-bottom: 58px;
+}
+.services__item {
+  background: #6ca7ef;
+  border-radius: 20px;
+  height: 249px;
+  margin: 7.5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 45px;
+  text-decoration: none;
+  transition: 0.2s;
+}
+.services__item:hover {
+  background: #5391dc;
+  transition: 0.2s;
+}
+.services .col-sl-12,
+.services .col-md-6,
+.services .col-lg-4,
+.services .col-lg-8 {
+  padding: 0;
+}
+.services__item-text {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+}
+.services__item-img {
+  height: 81px;
+  margin-bottom: 20px;
+}
+.services__item-img_startup {
+  height: 81px;
+}
+
+@media (min-width: 992px) {
+  .services__img-report_height {
+    height: 507px;
+  }
+  .services__img-idea_height {
+    height: 164px;
+  }
+  .services__img-search_height {
+    height: 328px;
+  }
+  .services__img-startup_height {
+    height: 328px;
+  }
+  .services__items {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .item_up {
+    margin-top: -343px;
+  }
+  .services__item {
+    justify-content: center;
+  }
+  .services__item-text {
+    margin-top: 30px;
+  }
+  .services__img-idea_justify {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .services__img-idea_justify .services__item-text {
+    display: inline-block;
+    width: 460px;
+    margin-left: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .services__title-img-poly {
+    display: none;
+  }
+  .services__title-img-arrow {
+    display: none;
+  }
+  .services__title-text {
+    text-align: center;
+    padding-top: 80px;
+    margin-left: 0;
+  }
+  .services__title {
+    height: 140px;
+  }
+  .services__items {
+    padding-bottom: 34px;
+  }
+}
 #blue .about__wrapper {
   padding-top: 105px;
   padding-bottom: 115px;
@@ -297,97 +425,19 @@
   line-height: 22px;
   color: #282C37;
 }
-#blue .blue__container {
-  padding-top: 85px;
-  margin-bottom: 65px;
-  position: relative;
-}
-#blue .blue__container .blue__svg {
-  top: 45px;
-  left: 70px;
-  width: 120px;
-  z-index: -1;
-  height: 120px;
-  position: absolute;
-}
-#blue .blue__container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: url(assets/img/icons/line-serv_web.svg);
-  width: 100%;
-  height: 100%;
-  background-position: 32% -40px;
-  background-repeat: no-repeat;
-  z-index: -1;
-}
-#blue .blue__container .blue__text-title {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 37px;
-  text-transform: uppercase;
-  color: #282C37;
-  padding-left: 120px;
-  margin-bottom: 85px;
-  width: 100%;
-}
-#blue .blue__container .block-blue__size {
-  background: #6CA7EF;
-  border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 32px;
-  padding: 10px 15px;
-}
-#blue .blue__container .block-blue__size p {
-  font-family: "Lato";
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  letter-spacing: 0.01em;
-  color: #FFFFFF;
-}
-#blue .blue__container .block-blue__size p a {
-  text-decoration: none;
-  color: #FFFFFF;
+#blue .four__wrapper .four__container .block p:hover {
+  color: #5391DC;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  transition: 0.2s;
   cursor: pointer;
 }
-#blue .blue__container .block__blue-first {
-  height: 507px;
-}
-#blue .blue__container .block__blue-first p {
-  max-width: 270px;
-}
-#blue .blue__container .block__blue-second {
-  height: 164px;
-  flex-direction: row;
-  margin-bottom: 15px;
-}
-#blue .blue__container .block__blue-second p {
-  max-width: 495px;
-}
-#blue .blue__container .block__blue-third {
-  height: 328px;
-}
-#blue .blue__container .block__blue-third p {
-  max-width: 213px;
-}
-#blue .blue__container .block__blue-fourth {
-  height: 328px;
-}
-#blue .blue__container .block__blue-fourth p {
-  max-width: 213px;
-}
-#blue .blue__container .responsive__ipad {
-  display: none;
-}
 
+@media (min-width: 1399px) {
+  .img img {
+    width: 467.8px;
+  }
+}
 @media (max-width: 575.98px) {
   .blue__container .block__blue-first,
 .blue__container .block__blue-third {
@@ -665,7 +715,14 @@
   font-style: italic;
 }
 #services {
-  background: #E5E5E5;
+  position: relative;
+}
+#services .training__bg-img {
+  position: absolute;
+  top: 60px;
+  overflow: hidden;
+  right: 0;
+  z-index: 1;
 }
 #services .services__description {
   margin-top: 10px;
@@ -835,18 +892,26 @@
   }
 }
 #training {
-  background: #E5E5E5;
+  position: relative;
+}
+#training .training__bg-img {
+  position: absolute;
+  top: 60px;
+  overflow: hidden;
+  right: 0;
+  z-index: 1;
+}
+#training .training__bg-cube {
+  position: absolute;
+  bottom: 730px;
+  overflow: hidden;
+  right: 0;
+  z-index: 1;
 }
 #training .training__description {
   margin-top: 10px;
   margin-bottom: 130px;
   position: relative;
-}
-#training .training__description .training__bg-img {
-  position: absolute;
-  top: -80px;
-  right: 0;
-  z-index: 1;
 }
 #training .training__description .training__cube-img {
   position: absolute;
@@ -858,12 +923,6 @@
   position: absolute;
   bottom: -4%;
   right: 10.5%;
-  z-index: 1;
-}
-#training .training__description .training__bg-cube {
-  position: absolute;
-  bottom: 730px;
-  right: 0;
   z-index: 1;
 }
 #training .training__description .description-text {
@@ -1053,7 +1112,7 @@
     color: #A5CBF9;
   }
 }
-@media (max-width: 767.98px) {
+@media (max-width: 1000.98px) {
   .training__cube-img,
 .training__bg-img,
 .training__bg-cube,
@@ -1229,18 +1288,20 @@
 }
 #price {
   padding-bottom: 50px;
+  position: relative;
+}
+#price .training__bg-img {
+  position: absolute;
+  top: 60px;
+  overflow: hidden;
+  right: 0;
+  z-index: 1;
 }
 #price .price__items {
   justify-content: center;
   margin: auto;
   margin-top: 20px;
   position: relative;
-}
-#price .price__items .training__bg-img {
-  position: absolute;
-  top: -80px;
-  right: 0;
-  z-index: 1;
 }
 #price .price__items .training__cube-img {
   position: absolute;
@@ -1373,7 +1434,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   overflow: scroll;
   visibility: hidden;
   background: rgba(0, 0, 0, 0.5);
@@ -1436,11 +1497,11 @@
 }
 .modal-order__input::-moz-placeholder {
   font-style: italic;
-  color: black;
+  color: #9FA7B0;
 }
 .modal-order__input::placeholder {
   font-style: italic;
-  color: black;
+  color: #9FA7B0;
 }
 .modal-order__input_error {
   border: 1px solid #CF4747;
@@ -1489,7 +1550,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 22px;
-  text-transform: uppercase;
+  text-align: center;
   color: #30B01E;
 }
 
@@ -1504,7 +1565,7 @@
 
 @media (max-width: 530px) {
   .modal-order {
-    z-index: 10;
+    z-index: 100;
   }
   .modal-order__wrapper {
     height: 100%;
